--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="hero-content">
       <h2>Welcome to My Portfolio</h2>
       <p>Building Beautiful Web Experiences</p>
-      <a href="#portfolio" class="cta-button">View Portfolio</a>
+      <a href="#portfolio" class = "animated-button">View Portfolio</a>
     </div>
   </section>
 
@@ -30,7 +30,7 @@
     <div class="about-content">
       <h2>About Me</h2>
       <p>This is who I am.</p>
-      <a href="#contact" class="cta-button">Learn More About Me</a>
+      <a href="#contact" class= "animated-button">Learn More About Me</a>
     </div>
   </section>
 
@@ -38,7 +38,7 @@
     <div class="portfolio-content">
       <h2>Portfolio</h2>
       <!-- Add project showcase here -->
-      <a href="#portfolio" class="cta-button">View More Projects</a>
+      <a href="#portfolio" class = "animated-button">View More Projects</a>
     </div>
   </section>
 
@@ -46,7 +46,7 @@
     <div class="contact-content">
       <h2>Contact</h2>
       <!-- Add contact form or direct contact information here -->
-      <a href="#contact" class="cta-button">Let's Work Together!</a>
+      <a href="#contact" class = "animated-button1">Let's Work Together!</a>
     </div>
   </section>
 
@@ -56,4 +56,4 @@
 
  
 </body>
-  </html>
+              </html>
