--- a/index.html
+++ b/index.html
@@ -1,59 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Developer Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+    <title>Siya's Portfolio</title>
 </head>
 <body>
-  <header>
-    <h1>Siyabonga Soko</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section id="hero">
-    <div class="hero-content">
-      <h2>Welcome to My Portfolio</h2>
-      <p>Building Beautiful Web Experiences</p>
-      <a href="#portfolio" class = "animated-button">View Portfolio</a>
+    <div class="body-container">
+        <div id="main" class="container">
+            <form class="form-container">
+                <ul id="nav-menu">
+                    <li id="portfolio"><a>Portfolio</a></li>
+                    <li><a id = "home">Home</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Skills</a></li>
+                    <li><a>Portfolio</a></li>
+                    <li><a>Contact me</a></li>
+                </ul>
+                <header>
+                    <h1>Hi there, I'm Siya, waving the flag as a <span class= "dev-text">software developer.</span></h1>
+                </header>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut massa eros. Sed lacinia est sit amet lacus commodo, ac blandit ligula commodo. Sed laoreet justo sit amet risus efficitur tristique. Integer vel mauris in risus elementum placerat. Sed sit amet arcu quis turpis mattis mattis id vel tellus.</p>
+            </form>
+        </div>
     </div>
-  </section>
-
-  <section id="about">
-    <div class="about-content">
-      <h2>About Me</h2>
-      <p>This is who I am.</p>
-      <a href="#contact" class= "animated-button">Learn More About Me</a>
-    </div>
-  </section>
-
-  <section id="portfolio">
-    <div class="portfolio-content">
-      <h2>Portfolio</h2>
-      <!-- Add project showcase here -->
-      <a href="#portfolio" class = "animated-button">View More Projects</a>
-    </div>
-  </section>
-
-  <section id="contact">
-    <div class="contact-content">
-      <h2>Contact</h2>
-      <!-- Add contact form or direct contact information here -->
-      <a href="#contact" class = "animated-button1">Let's Work Together!</a>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2024 Siyabonga Soko</p>
-  </footer>
-
- 
 </body>
-              </html>
+                  </html>
