--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
+    <link rel = "stylesheet"
+        href = "styles.css">
     <title>Siya's Portfolio</title>
 </head>
 <body>
