--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html >
 <head>
     <link rel = "stylesheet"
+        type = "text/css"
         href = "styles.css">
     <title>Siya's Portfolio</title>
 </head>
