--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
-    <link rel = "stylesheet"
+<link rel = "stylesheet"
         type = "text/css"
         href = "styles.css">
     <title>Siya's Portfolio</title>
@@ -18,12 +18,17 @@
                     <li><a>Portfolio</a></li>
                     <li><a>Contact me</a></li>
                 </ul>
-                <header>
-                    <h1>Hi there, I'm Siya, waving the flag as a <span class= "dev-text">software developer.</span></h1>
+                
+                <div id = "homeInfo" class = "home-info"><header>
+                    <h1>Hi there, I'm <span class = "siya-text">Siya</span>, waving the flag as a <span class= "dev-text">software developer.</span></h1>
                 </header>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut massa eros. Sed lacinia est sit amet lacus commodo, ac blandit ligula commodo. Sed laoreet justo sit amet risus efficitur tristique. Integer vel mauris in risus elementum placerat. Sed sit amet arcu quis turpis mattis mattis id vel tellus.</p>
+                <p>Persuing excellence in each line of code, with unwavering determination.</p>
+                    <button 
+                    id= "viewButton" class= "view-button">View CV</button>
+                </div>
+                
             </form>
         </div>
     </div>
 </body>
-                  </html>
+    </html>
